docs: prepare contest submission post and 120-second demo script
Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>